--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.3.0",
-    "react": "^16.12.0",
+    "hello": "^0.6.2",
+    "react": "^19.0.0",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
