--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.3.0",
+    "framer-motion": "^12.15.0",
     "hello": "^0.6.2",
     "react": "^19.0.0",
     "react-app-rewired": "^2.2.1",
@@ -19,6 +20,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.3",
     "rehype-raw": "^7.0.0"
   },
   "scripts": {
